--- a/Users/static/CSS/subprofilesGroupStyles.css
+++ b/Users/static/CSS/subprofilesGroupStyles.css
@@ -25,6 +25,7 @@ main {
     right: 0;
     background-image: url(../IMAGES/Escritorio.webp);
     background-size: cover;
+    overflow-y: auto;
 }
 
 aside:has(input[type="checkbox"]:checked) ~ main {
@@ -36,6 +37,9 @@ aside:has(input[type="checkbox"]:checked) ~ main {
     height: calc(2rem + 44.78px);
     background-color: var(--fb-color);
     container-name: filter-bar;
+    position: sticky;
+    top: 0;
+    z-index: 1;
 }
 
 .filter-bar__filter-container {
@@ -70,4 +74,91 @@ aside:has(input[type="checkbox"]:checked) ~ main {
     width: clamp(42px, calc(28dvh - 5px), 210px);
     margin: 2.5px 0px;
 }
+
+.group-container {
+    width: 90%;
+    height: 22.5dvh;
+    margin: 2.5% 5%;
+    display: grid;
+    grid-template-columns: repeat(9, 1fr);
+    grid-template-rows: 1fr 2fr 1fr;
+    grid-column-gap: 0px;
+    grid-row-gap: 0px;
+    overflow: hidden;
+    background-color: var(--bg-color);
+    border: #335a94 2px solid;
+    border-radius: 8px;
+}
+
+.group-image {
+    grid-column: span 3 / span 3;
+    grid-row: span 3 / span 3;
+    width: 100%;
+    height: 100%;
+    padding-right: 10px;
+}
+
+.group-image > label {
+    display: flex;
+    width: 100%;
+    height: 100%;
+}
+
+.group-image img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+    border-right: #335a94 2px solid;
+}
+
+.image-overlay {
+    display: none;
+    cursor: pointer;
+    position: absolute;
+    height: 22.5%;
+    width: calc(30% - 10px);
+    background-color: #0004;
+}
+
+.group-image:hover .image-overlay {
+    display: block;
+}
+
+label.material-symbols-outlined {
+    background-color: transparent;
+    padding: 5px 10px;
+    color: #fff;
+    cursor: pointer;
+}
+
+label.material-symbols-outlined:hover {
+    filter: drop-shadow(0 0 5px #fff);
+}
+
+.group-image > div {
+    display: none;
+}
+
+.group-info {
+    display: flex;
+    flex-direction: row;
+    grid-column: span 6 / span 6;
+    grid-column-start: 4;
+    align-items: center;
+}
+
+.group-name__container {
+    margin-right: 10px;
+}
+
+.group-description__container {
+    grid-area: 2 / 4 / 3 / 10;
+}
+
+.save-button {
+    position: relative;
+    top: 15dvh;
+}
+
 
