--- a/Users/templates/Users/home.html
+++ b/Users/templates/Users/home.html
@@ -28,7 +28,7 @@
                 <div class="collapse navbar-collapse navbar__nav" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link active text-white" aria-current="page" href="#">{% translate "Inicio" %}</a>
+                            <a class="nav-link active text-white" aria-current="page" href="#">Inicio</a>
                         </li>
                         <li class="nav-item"> 
                             <a class="nav-link text-white" href="#">Sobre Nosotros</a>
