--- a/Users/static/CSS/subprofilesGroupStyles.css
+++ b/Users/static/CSS/subprofilesGroupStyles.css
@@ -149,6 +149,7 @@ label.material-symbols-outlined:hover {
     grid-column: span 6 / span 6;
     grid-column-start: 4;
     align-items: center;
+    padding: 10px;
 }
 
 .group-name__container {
@@ -156,9 +157,15 @@ label.material-symbols-outlined:hover {
 }
 
 .group-description__container {
-    grid-area: 2 / 4 / 3 / 10;
+    grid-area: 2 / 4 / 4 / 9;
     height: 100%;
     width: 100%;
+    padding: 0 10px;
+}
+
+.group-description__container > textarea {
+    width: 100%;
+    height: 70%;
 }
 
 .save-button {
