--- a/Users/templates/Users/subprofiles_group.html
+++ b/Users/templates/Users/subprofiles_group.html
@@ -15,7 +15,7 @@
     <meta name="robots" content="noindex, nofollow">
 </head>
 <body>
-    {% include 'Users/sideBar.html' with path='manage_subusers' profile=profile type=type permissions=permissions%}
+    {% include 'Users/sideBar.html' with path='manage_subusergroups' profile=profile type=type permissions=permissions%}
     <main>
         <div class="filter-bar"> 
             <div class="filter-bar__filter-container">
