--- a/Users/templates/Users/subprofiles_group.html
+++ b/Users/templates/Users/subprofiles_group.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
     <link rel="stylesheet" href="{%static '/CSS/sideBarStyles.css'%}">
     <link rel="stylesheet" href="{%static '/CSS/subprofilesGroupStyles.css'%}">
@@ -17,10 +18,16 @@
 <body>
     {% include 'Users/sideBar.html' with path='manage_subusergroups' profile=profile type=type permissions=permissions%}
     <main>
-        <div class="filter-bar"> 
-            <div class="filter-bar__filter-container">
-                <p>Grupos</p>
-                <div class="filter-bar__logo-container">
+        <div class="filter-bar container"> 
+            <div class="filter-bar__filter-container row">
+                <input type="submit" value="sort" class="filter-bar__a-z material-symbols-outlined col-md-1 col-0">
+                <input type="submit" value="sort" class="filter-bar__z-a material-symbols-outlined col-md-1 col-0">
+                <input onclick="window.location.href='/manage_users';" type="submit" value="filter_alt" class="filter-bar__type material-symbols-outlined col-md-1 col-3">
+                <div class="filter-bar__name col-md-4 col-8">
+                    <input type="text">
+                    <input value="search" type="submit" class="material-symbols-outlined">
+                </div>
+                <div class="filter-bar__logo-container col-md-5 col-0">
                     <img src="{%static '/IMAGES/logo_transparente_blanco.webp'%}" alt="logo" class="logo">
                 </div>
             </div>
