--- a/templates/Users/log_users.html
+++ b/templates/Users/log_users.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <div>
+        <h2>Cambios de usuarios</h2>
         {% for log in log_users %}
         <div>
             <p>Usuario afectado: {{log.user_changed.username}}</p>
@@ -23,6 +24,25 @@
             </form>
         </div>
         {% endfor %}
+
+    </div>
+    <div>
+        <h2>Cambios de grupos</h2>
+        {% for log in log_groups %}
+        <div>
+            <p>Usuario afectado: {{log.group_changed.name}}</p>
+            <p>Tipo de cambio:{% trans log.type_change.value %} </p>
+            <p>Descripción: {% trans log.description %}</p>
+            <p>Fecha: {{ log.date|time:"H:i" }}, {{log.date |date:"SHORT_DATE_FORMAT"}} </p>
+            <form method="POST">
+                <input type="submit" value="Retroceder cambio">
+                {% csrf_token %}
+                <input type="hidden" name="user_id" value="{{ log.user_changed.id }}">
+                <input type="hidden" name="log_id" value="{{ log.id }}">
+            </form>
+        </div>
+        {% endfor %}
+
     </div>
 </body>
 </html>
